<resources>
    <string name="app_name">SI PhD</string>
    <integer name="max_sitz_numb">15</integer>

    <string name="capition_anfrageliste">Anfrageliste</string>
    <string name="caption_klausur">Klausureinsichtstermine</string>
    <string name="caption_profil">Profil</string>
    <string name="caption_statistic">Statistik</string>
    <string name="caption_editTask">Anfrage kommentieren</string>
    <string name="caption">SmartInsight PhD</string>
    <!-- Strings related to login -->
    <string name="bundleRequests">requests</string>

    <!-- if server is offline, use marcengelmann.com/smart -->
    <string name="website">http://pr-android.ftm.mw.tum.de/android/smart_insight</string>

    <string name="prompt_matrikelnummber">Matrikelnummer</string>
    <string name="text_information">Auf dieser Seite werden die Anfragen von den Studenten aufgelistet. Kommentare zu den einzelnen Anfragen können durch den roten runden Bearbeitungs Button erstellt werden!</string>
    <string name="calendar_information">Hier wirden die aktuellen Klausureinsichtstermine aufgelistet. Zur Zeit sind keine vorhanden!</string>

    <string name="prompt_email">E-Mail</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Zur Einsicht einchecken</string>
    <string name="action_sign_in_short">Anmelden</string>
    <string name="error_invalid_email">Die Matrikelnummer ist ungültig</string>
    <string name="error_invalid_password">Das Passwortformat ist ungültig</string>
    <string name="error_incorrect_password">Die E-Mail Adresse ist unbekannt</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Anfragen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="exam">exam</string>
    <string name="id">id</string>
    <string name="deviceID">deviceID</string>
    <string name="didChange">didChange</string>
    <string name="loggedIn">loggedIn</string>
    <string name="statusProfilPic">statusProfilPic</string>
    <string name="profilPic">profilPic</string>
    <string name="calendar">calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
