<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_anfragen"
            android:icon="@drawable/ic_action_lists"
            android:title="@string/capition_anfrageliste" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/caption_klausur" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/caption_settings" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/ic_action_statistic"
            android:title="@string/caption_statistic" />
        <item
            android:id="@+id/nav_abmelden"
            android:icon="@drawable/ic_action_power"
            android:title="Abmelden" />
    </group>



</menu>
